[package]
name = "lindemayer_grammar"
version = "0.1.0"
edition = "2021"

[lib]
name = "lindemayer_grammar"
path = "src/lib.rs"

[[example]]
name = "fractal_tree"
path = "examples/fractal_tree/main.rs"

[[example]]
name = "cantor_set"
path = "examples/cantor_set/main.rs"

[dev-dependencies]
turtle = {git = "https://github.com/sunjay/turtle"}