[package]
name = "lindenmayer_grammar"
version = "0.1.0"
edition = "2021"

[dependencies]
raqote = "0.8.2"
rand = "0.8.5"
ordered-float = "3.4.0"
anyhow = "1.0.69"

[lib]
name = "lindenmayer_grammar"
path = "src/lib.rs"

[[example]]
name = "fractal_tree"
path = "examples/fractal_tree/main.rs"

[[example]]
name = "koch_curve"
path = "examples/koch_curve/main.rs"

[[example]]
name = "sierpinski"
path = "examples/sierpinski/main.rs"

[[example]]
name = "dragon_curve"
path = "examples/dragon_curve/main.rs"

[[example]]
name = "fern"
path = "examples/fern/main.rs"